fix ie11 main layout issue

--- a/client/stylesheets/base/_root.scss
+++ b/client/stylesheets/base/_root.scss
@@ -14,11 +14,11 @@ body {
   display: flex;
   flex-flow: column nowrap;
   background-color: #fff;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .page-wrapper {
-  flex: 1;
+  flex: 1 0 auto;
   min-height: r(20);
   background-color: $brown-light;
   @each $type in $characters {
